# hedwig

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  build.rs  config.sample.toml  config.sample.yaml  deny.toml  docker-compose.yml  hedwig.yaml  matrix-hedwig.service  renovate.json
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: add-issues-to-project.yaml  docker.yml  main.yml  rust-workflow.yml  rustdoc.yml
.gitlab/: CODEOWNERS
cargo/: config
deploy/: config.properties.sample  deployment.yaml  kustomization.yaml  service.yaml
src/: api.rs  apns.rs  apns_notification.rs  error.rs  fcm.rs  fcm_notification.rs  handlers.rs  jitter.rs  lib.rs  main.rs  metrics.rs  models.rs  pusher.rs  settings.rs
src/lib/: mod.rs  models.rs
supply-chain/: audits.toml  config.toml
tests/: api.rs  apns.rs  config-bad-apns.yaml  dummy-service-account.json  fcm.rs  jitter.rs  many_devices_prometheus.txt  message_android.json  message_android_clearing.json  message_android_legacy.json  message_android_legacy_clearing.json  message_generic.json  message_generic_clearing.json  message_ios.json  message_ios_clearing.json  message_ios_direct_apns.json  message_ios_direct_apns_clearing.json  message_ios_fcm.json  message_ios_fcm_clearing.json  normal_operation_prometheus.txt  pusher.rs  settings.rs  test.key
