[package]
name = "matrix-hedwig"
version = "1.5.1"
authors = ["Christian Pauly <c.pauly@famedly.com>", "Kateřina Churanová <k.churanova@famedly.com>", "Emily Dietrich <emilydietrich321@gmail.com>"]
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1.56"
axum = "0.5.6"
axum-opentelemetry-middleware = { version = "0.1", git = "ssh://git@gitlab.com/famedly/company/backend/libraries/axum-opentelemetry-middleware.git", rev = "7a7a2f389da86fbd92e5fd5783b9e4018ad7a700" }
color-eyre = "0.6.1"
config = "0.13.1"
firebae-cm = "0.1.0"
gcp_auth = "0.7.3"
opentelemetry = "0.17.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
futures = "0.3.21"
http = "0.2.8"
regex = "1.5.6"
tower = "0.4.13"

[build-dependencies]
vergen = "6.0.0" # vergen passes metadata like the version and git commit hash to cargo as a compile-time environment variables
