[package]
name = "matrix-hedwig"
version = "1.5.5"
authors = ["Christian Pauly <c.pauly@famedly.com>", "Kateřina Churanová <k.churanova@famedly.com>", "Emily Dietrich <emilydietrich321@gmail.com>"]
publish = false
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.1", features = ["macros"] }
axum-extra = "0.8.0"
axum-opentelemetry-middleware = { version = "0.2", git = "https://github.com/famedly/axum-opentelemetry-middleware.git", rev = "2a0848ce4aa4498ff279920f6b6c76020362c2b0" }
color-eyre = "0.6.1"
config = "0.13.1"
firebae-cm = "0.1.0"
gcp_auth = "0.7.6"
opentelemetry = "0.18.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"

[dev-dependencies]
futures = "0.3.21"
http = "0.2.8"
hyper = "0.14.20"
regex = "1.9.6"
tower = "0.4.13"

[build-dependencies]
vergen = "6.0.0" # vergen passes metadata like the version and git commit hash to cargo as a compile-time environment variables
